Add copy image context action to zoom window (issue #697)

--- a/resources.qrc
+++ b/resources.qrc
@@ -46,5 +46,6 @@
         <file>images/icons/bug.png</file>
         <file>images/icons/tab-poolplus.png</file>
         <file>images/flash.png</file>
+        <file>images/icons/copy.png</file>
     </qresource>
 </RCC>
