Replace media player by play icon (fix #721, fix #542)

--- a/resources.qrc
+++ b/resources.qrc
@@ -51,5 +51,6 @@
         <file>images/sources/saucenao.png</file>
         <file>images/sources/iqdb.png</file>
         <file>images/sources/tineye.png</file>
+        <file>images/play-overlay.png</file>
     </qresource>
 </RCC>
