Add 'Open destination folder' end of download action (fix #695)

--- a/src/batch/batchwindow.ui
+++ b/src/batch/batchwindow.ui
@@ -221,6 +221,11 @@
           </item>
           <item>
            <property name="text">
+            <string>Open destination folder</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
             <string>Play a sound</string>
            </property>
           </item>
