--- a/resources/resources.qrc
+++ b/resources/resources.qrc
@@ -48,9 +48,11 @@
         <file>images/flash.png</file>
         <file>images/icons/copy.png</file>
         <file>images/icons/document-binary.png</file>
-        <file>images/sources/saucenao.png</file>
-        <file>images/sources/iqdb.png</file>
-        <file>images/sources/tineye.png</file>
+        <file>images/reverse-search/saucenao.png</file>
+        <file>images/reverse-search/iqdb.png</file>
+        <file>images/reverse-search/tineye.png</file>
+        <file>images/reverse-search/google.png</file>
+        <file>images/reverse-search/yandex.png</file>
         <file>images/play-overlay.png</file>
     </qresource>
 </RCC>
